# haskell-study

./: .gitignore  LICENSE  README.md  haskell-study.cabal
week1/: HW01.hs  HW01Tests.hs
week2/: HW02.hs  HW02Tests.hs
week4/: HW04.hs
week5/: HW05.hs  new-transactions.json
week6/: HW06.hs
week7/: HW07.hs
