name:                haskell-study
version:             0.1.0.0
synopsis:            Haskell Study @ KAIST
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-study#readme
license:             MIT
license-file:        LICENSE
author:              Heejong Ahn
maintainer:          heejongahn@gmail.com
copyright:           2016 Heejong Ahn
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , week1
                     , week2
                     , week3
                     , week4
                     , week5
                     , week6
                     , week7
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , aeson
                     , bits
                     , vector
                     , MonadRandom
                     , random
  default-language:    Haskell2010

executable haskell-study-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-study
                     , Spock >=0.7.9
  default-language:    Haskell2010

test-suite haskell-study-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-study
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-study
